# rockyourslotsoff

./: .gitignore  01-Article.html  01-Article.md  02-Article.md  03-Article.md  04-Article.md  Article 01-RockYourSlotsOffSeries.md  README.md  TODO
NETSlot/: Form1.Designer.cs  Form1.cs  NETSlot.csproj  NETSlot.sln  Program.cs
NETSlot/MacOS/: MacCatalystApp1.sln  MacOS.code-workspace
src/Cpp/: CMakeLists.txt  vslot.cpp
src/Cpp/tests/: CMakeLists.txt
src/Go/: go.mod  go.sum  index.html  main.go  testapi  testapi.bats
src/Go/api/: vslot_service.go  vslot_service_handler.go
src/Go/vslot/: vslot.go  vslot_test.go
v1/: .gitignore  03-Article.md
v1/src/Cpp/: vslot.cpp
v1/src/Cpp/tests/: CMakeLists.txt
v1/src/Go/: Makefile  go.mod  go.sum
v1/src/Go/vslot/: vslot.go
v2/: go.mod  main.go
v3/: go.mod  index.html  main.go
v4/: go.mod  go.sum  main.go
v5/: go.mod  go.sum  main.go
v5/bank/: index.html  main.go
v5/client/: main.go
v6/: go.mod  main.go
v6/static/: index.html  scripts.js
